First API Tested

--- a/app/src/main/res/layout/activity_voter_details.xml
+++ b/app/src/main/res/layout/activity_voter_details.xml
@@ -31,7 +31,7 @@
                 android:layout_marginEnd="@dimen/_5mdp"
                 android:layout_weight="1"
                 android:background="@drawable/click_effect_back"
-                android:text="Survey"
+                android:text="@string/survey"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -43,7 +43,7 @@
                 android:layout_marginEnd="@dimen/_5mdp"
                 android:layout_weight="1"
                 android:background="@drawable/click_effect_back"
-                android:text="Slip"
+                android:text="@string/slip"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -56,7 +56,7 @@
                 android:visibility="gone"
                 android:layout_weight="1"
                 android:background="@drawable/bg_green_corner"
-                android:text="Call"
+                android:text="@string/call"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -68,7 +68,7 @@
                 android:layout_marginEnd="@dimen/_5mdp"
                 android:layout_weight="1"
                 android:background="@drawable/click_effect_back"
-                android:text="Print"
+                android:text="@string/print"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -80,7 +80,7 @@
                 android:layout_marginEnd="@dimen/_5mdp"
                 android:layout_weight="1"
                 android:background="@drawable/click_effect_back"
-                android:text="Other"
+                android:text="@string/other"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
         </LinearLayout>
@@ -278,7 +278,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5mdp"
-                android:text="Language : "
+                android:text="@string/language"
                 android:visibility="visible"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
@@ -293,23 +293,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Bengali"/>
+                    android:text="@string/bengali"/>
                 <RadioButton
                     android:id="@+id/hindi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hindi"/>
+                    android:text="@string/hindi"/>
                 <RadioButton
                     android:id="@+id/none"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Urdu"/>
+                    android:text="@string/urdu"/>
             </RadioGroup>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5mdp"
-                android:text="Residential Status : "
+                android:text="@string/residential_status"
                 android:visibility="visible"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
@@ -324,23 +324,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Present"/>
+                    android:text="@string/present"/>
                 <RadioButton
                     android:id="@+id/relocated"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Relocated"/>
+                    android:text="@string/relocated"/>
                 <RadioButton
                     android:id="@+id/dead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Dead"/>
+                    android:text="@string/dead"/>
             </RadioGroup>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5mdp"
-                android:text="Head of The Family : "
+                android:text="@string/head_of_the_family"
                 android:visibility="visible"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
@@ -355,18 +355,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Yes"/>
+                    android:text="@string/yes"/>
                 <RadioButton
                     android:id="@+id/fNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No"/>
+                    android:text="@string/no"/>
             </RadioGroup>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5mdp"
-                android:text="Party Worker? "
+                android:text="@string/party_worker"
                 android:visibility="visible"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12font_mdp" />
@@ -380,13 +380,13 @@
                     android:id="@+id/wYes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Yes"/>
+                    android:text="@string/yes"/>
                 <RadioButton
                     android:id="@+id/wNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="No"/>
+                    android:text="@string/no"/>
             </RadioGroup>
         </LinearLayout>
         <Button
@@ -394,7 +394,7 @@
             android:layout_width="match_parent"
             android:layout_margin="@dimen/_8mdp"
             android:layout_height="wrap_content"
-            android:text="Wish Happy Birthday!"
+            android:text="@string/wish_happy_birthday"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:background="@drawable/click_effect_red_gray"
@@ -404,7 +404,7 @@
             android:layout_width="match_parent"
             android:layout_margin="@dimen/_8mdp"
             android:layout_height="wrap_content"
-            android:text="Wish Anniversary!"
+            android:text="@string/wish_anniversary"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:background="@drawable/click_effect_red_gray"
