--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/notification"
-        android:title="Notifications"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/notifications_24"/>
+<!--    <item-->
+<!--        android:id="@+id/translate"-->
+<!--        android:title="Translate"-->
+<!--        app:showAsAction="ifRoom"-->
+<!--        android:icon="@drawable/translate_24"/>-->
     <item
         android:id="@+id/logout"
         android:title="LogOut"
