--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_200mdp"
-        android:src="@drawable/pubimg_min"
+        android:src="@drawable/img"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:paddingTop="@dimen/_5mdp"
         android:paddingEnd="@dimen/_10mdp"
         android:paddingBottom="@dimen/_5mdp"
-        android:text="Booth Relation Officer"
+        android:text="Booth Relation Volunteer"
         android:textColor="@color/white"
         android:layout_margin="@dimen/_10mdp"
         android:textSize="@dimen/_14font_mdp"
