--- a/app/src/main/res/layout/activity_stat_page.xml
+++ b/app/src/main/res/layout/activity_stat_page.xml
@@ -7,190 +7,295 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/gray"
+    android:background="@drawable/bgm"
+    android:gravity="center"
     android:padding="@dimen/_5mdp"
     tools:context=".Activities.StatPageActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_14font_mdp"
+        android:text="Daily Highlights"
+        android:layout_marginStart="@dimen/_5mdp"
+        android:textStyle="bold"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5mdp"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="@dimen/_5mdp"
             android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
             android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_green_corner"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/telephone" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Phone Added"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
+                android:layout_gravity="top"
                 android:text="0"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18font_mdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="Phone Added"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_11font_mdp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_blue_purple_corners"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18font_mdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="Scrutney Done"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_11font_mdp" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_orange_corners_round"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18font_mdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="HOF Updated"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_11font_mdp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_main_color_corner8"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18font_mdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="Language Updated"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_11font_mdp" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_icon_color_corner8"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18font_mdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:gravity="center"
-                android:text="Religion Updated"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_11font_mdp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/_5mdp"
-            android:background="@drawable/bg_dark_yellow"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:textSize="@dimen/_18font_mdp"
                 android:textColor="@color/black"
-                android:text="0"/>
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/scrutiny" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Total Scrutiny"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/_5mdp"
-                android:textSize="@dimen/_11font_mdp"
+                android:layout_gravity="top"
+                android:text="0"
                 android:textColor="@color/black"
-                android:text="Survey Done"/>
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/survey_a" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Survey Done"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/google_translate" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Lang. Updated"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/religion" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Relg. Updated"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_12mdp"
+            android:visibility="invisible">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/survey_a" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5mdp"
+                    android:gravity="center"
+                    android:text="Survey Done"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_13font_mdp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18font_mdp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/nextBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10mdp"
+        android:layout_marginEnd="@dimen/_5mdp"
+        android:layout_gravity="end"
+        android:text="Next"/>
 
 </LinearLayout>
