--- a/app/src/main/res/layout/activity_stat_page.xml
+++ b/app/src/main/res/layout/activity_stat_page.xml
@@ -35,7 +35,10 @@
             android:elevation="@dimen/_5mdp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/_12mdp">
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -46,14 +49,14 @@
                 <ImageView
                     android:layout_width="@dimen/_24mdp"
                     android:layout_height="@dimen/_24mdp"
-                    android:src="@drawable/telephone" />
+                    android:src="@drawable/meeting" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10mdp"
                     android:gravity="center"
-                    android:text="Phone Added"
+                    android:text="Meeting Today"
                     android:textSize="@dimen/_12font_mdp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -77,7 +80,10 @@
             android:elevation="@dimen/_5mdp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/_12mdp">
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -89,6 +95,56 @@
                     android:layout_width="@dimen/_24mdp"
                     android:layout_height="@dimen/_24mdp"
                     android:src="@drawable/scrutiny" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10mdp"
+                    android:gravity="center"
+                    android:text="Voter Slip"
+                    android:textSize="@dimen/_12font_mdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16font_mdp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_5mdp"
+            android:layout_weight="1"
+            android:background="@drawable/back_border_gray"
+            android:elevation="@dimen/_5mdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/_24mdp"
+                    android:layout_height="@dimen/_24mdp"
+                    android:src="@drawable/survey_a" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -109,11 +165,6 @@
                 android:textSize="@dimen/_16font_mdp"
                 android:textStyle="bold" />
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,7 +175,10 @@
             android:elevation="@dimen/_5mdp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/_12mdp">
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -135,56 +189,14 @@
                 <ImageView
                     android:layout_width="@dimen/_24mdp"
                     android:layout_height="@dimen/_24mdp"
-                    android:src="@drawable/survey_a" />
+                    android:src="@drawable/birthday" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10mdp"
                     android:gravity="center"
-                    android:text="Survey Done"
-                    android:textSize="@dimen/_12font_mdp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:text="0"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16font_mdp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/_5mdp"
-            android:layout_weight="1"
-            android:background="@drawable/back_border_gray"
-            android:elevation="@dimen/_5mdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/_12mdp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="@dimen/_24mdp"
-                    android:layout_height="@dimen/_24mdp"
-                    android:src="@drawable/google_translate" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10mdp"
-                    android:gravity="center"
-                    android:text="Lang. Updated"
+                    android:text="Today Birthday"
                     android:textSize="@dimen/_12font_mdp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -213,7 +225,10 @@
             android:elevation="@dimen/_5mdp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/_12mdp">
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -224,14 +239,14 @@
                 <ImageView
                     android:layout_width="@dimen/_24mdp"
                     android:layout_height="@dimen/_24mdp"
-                    android:src="@drawable/religion" />
+                    android:src="@drawable/telephone" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10mdp"
                     android:gravity="center"
-                    android:text="Relg. Updated"
+                    android:text="Phone Updated"
                     android:textSize="@dimen/_12font_mdp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -255,7 +270,10 @@
             android:elevation="@dimen/_5mdp"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/_12mdp"
+            android:paddingStart="@dimen/_12mdp"
+            android:paddingTop="@dimen/_15mdp"
+            android:paddingEnd="@dimen/_12mdp"
+            android:paddingBottom="@dimen/_15mdp"
             android:visibility="invisible">
 
             <LinearLayout
